// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PopupMenu Component renders as expected with required props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PopupMenu
    position={0}
    toggle={[Function]}
  >
    <Component />
  </PopupMenu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableWithoutFeedback
          onPress={[Function]}
        >
          <Component
            style={
              Array [
                Object {
                  "height": 1334,
                  "position": "absolute",
                  "top": -1334,
                  "width": 750,
                  "zIndex": 1,
                },
                Object {
                  "top": NaN,
                },
              ]
            }
          />
        </TouchableWithoutFeedback>,
        <withAnimatable(Component)
          animation="zoomIn"
          delay={0}
          direction="normal"
          duration={100}
          iterationCount={1}
          iterationDelay={0}
          onAnimationBegin={[Function]}
          onAnimationEnd={[Function]}
          onLayout={[Function]}
          onTransitionBegin={[Function]}
          onTransitionEnd={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "borderColor": "lightgrey",
                "borderRadius": 10,
                "borderWidth": 1,
                "position": "absolute",
                "shadowColor": "#4E4A47",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 5,
                "zIndex": 2,
              },
              Object {
                "bottom": NaN,
                "left": 10,
              },
            ]
          }
          useNativeDriver={false}
        >
          <Component />
        </withAnimatable(Component)>,
      ],
      "style": Object {
        "zIndex": 2,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            style={
              Array [
                Object {
                  "height": 1334,
                  "position": "absolute",
                  "top": -1334,
                  "width": 750,
                  "zIndex": 1,
                },
                Object {
                  "top": NaN,
                },
              ]
            }
          />,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Array [
              Object {
                "height": 1334,
                "position": "absolute",
                "top": -1334,
                "width": 750,
                "zIndex": 1,
              },
              Object {
                "top": NaN,
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animation": "zoomIn",
          "children": <Component />,
          "delay": 0,
          "direction": "normal",
          "duration": 100,
          "easing": undefined,
          "iterationCount": 1,
          "iterationDelay": 0,
          "onAnimationBegin": [Function],
          "onAnimationEnd": [Function],
          "onLayout": [Function],
          "onTransitionBegin": [Function],
          "onTransitionEnd": [Function],
          "style": Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "lightgrey",
              "borderRadius": 10,
              "borderWidth": 1,
              "position": "absolute",
              "shadowColor": "#4E4A47",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 5,
              "zIndex": 2,
            },
            Object {
              "bottom": NaN,
              "left": 10,
            },
          ],
          "transition": undefined,
          "useNativeDriver": false,
        },
        "ref": [Function],
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <Component
              style={
                Array [
                  Object {
                    "height": 1334,
                    "position": "absolute",
                    "top": -1334,
                    "width": 750,
                    "zIndex": 1,
                  },
                  Object {
                    "top": NaN,
                  },
                ]
              }
            />
          </TouchableWithoutFeedback>,
          <withAnimatable(Component)
            animation="zoomIn"
            delay={0}
            direction="normal"
            duration={100}
            iterationCount={1}
            iterationDelay={0}
            onAnimationBegin={[Function]}
            onAnimationEnd={[Function]}
            onLayout={[Function]}
            onTransitionBegin={[Function]}
            onTransitionEnd={[Function]}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "lightgrey",
                  "borderRadius": 10,
                  "borderWidth": 1,
                  "position": "absolute",
                  "shadowColor": "#4E4A47",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                  "shadowRadius": 5,
                  "zIndex": 2,
                },
                Object {
                  "bottom": NaN,
                  "left": 10,
                },
              ]
            }
            useNativeDriver={false}
          >
            <Component />
          </withAnimatable(Component)>,
        ],
        "style": Object {
          "zIndex": 2,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              style={
                Array [
                  Object {
                    "height": 1334,
                    "position": "absolute",
                    "top": -1334,
                    "width": 750,
                    "zIndex": 1,
                  },
                  Object {
                    "top": NaN,
                  },
                ]
              }
            />,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Array [
                Object {
                  "height": 1334,
                  "position": "absolute",
                  "top": -1334,
                  "width": 750,
                  "zIndex": 1,
                },
                Object {
                  "top": NaN,
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animation": "zoomIn",
            "children": <Component />,
            "delay": 0,
            "direction": "normal",
            "duration": 100,
            "easing": undefined,
            "iterationCount": 1,
            "iterationDelay": 0,
            "onAnimationBegin": [Function],
            "onAnimationEnd": [Function],
            "onLayout": [Function],
            "onTransitionBegin": [Function],
            "onTransitionEnd": [Function],
            "style": Array [
              Object {
                "backgroundColor": "white",
                "borderColor": "lightgrey",
                "borderRadius": 10,
                "borderWidth": 1,
                "position": "absolute",
                "shadowColor": "#4E4A47",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 5,
                "zIndex": 2,
              },
              Object {
                "bottom": NaN,
                "left": 10,
              },
            ],
            "transition": undefined,
            "useNativeDriver": false,
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing PopupMenu Component renders as expected with required props and parentHeight 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PopupMenu
    parentHeight={0}
    position={0}
    toggle={[Function]}
  >
    <Component />
  </PopupMenu>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableWithoutFeedback
          onPress={[Function]}
        >
          <Component
            style={
              Array [
                Object {
                  "height": 1334,
                  "position": "absolute",
                  "top": -1334,
                  "width": 750,
                  "zIndex": 1,
                },
                Object {
                  "top": -1334,
                },
              ]
            }
          />
        </TouchableWithoutFeedback>,
        <withAnimatable(Component)
          animation="zoomIn"
          delay={0}
          direction="normal"
          duration={100}
          iterationCount={1}
          iterationDelay={0}
          onAnimationBegin={[Function]}
          onAnimationEnd={[Function]}
          onLayout={[Function]}
          onTransitionBegin={[Function]}
          onTransitionEnd={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "borderColor": "lightgrey",
                "borderRadius": 10,
                "borderWidth": 1,
                "position": "absolute",
                "shadowColor": "#4E4A47",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 5,
                "zIndex": 2,
              },
              Object {
                "bottom": 10,
                "left": 10,
              },
            ]
          }
          useNativeDriver={false}
        >
          <Component />
        </withAnimatable(Component)>,
      ],
      "style": Object {
        "zIndex": 2,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            style={
              Array [
                Object {
                  "height": 1334,
                  "position": "absolute",
                  "top": -1334,
                  "width": 750,
                  "zIndex": 1,
                },
                Object {
                  "top": -1334,
                },
              ]
            }
          />,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Array [
              Object {
                "height": 1334,
                "position": "absolute",
                "top": -1334,
                "width": 750,
                "zIndex": 1,
              },
              Object {
                "top": -1334,
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animation": "zoomIn",
          "children": <Component />,
          "delay": 0,
          "direction": "normal",
          "duration": 100,
          "easing": undefined,
          "iterationCount": 1,
          "iterationDelay": 0,
          "onAnimationBegin": [Function],
          "onAnimationEnd": [Function],
          "onLayout": [Function],
          "onTransitionBegin": [Function],
          "onTransitionEnd": [Function],
          "style": Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "lightgrey",
              "borderRadius": 10,
              "borderWidth": 1,
              "position": "absolute",
              "shadowColor": "#4E4A47",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 5,
              "zIndex": 2,
            },
            Object {
              "bottom": 10,
              "left": 10,
            },
          ],
          "transition": undefined,
          "useNativeDriver": false,
        },
        "ref": [Function],
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <Component
              style={
                Array [
                  Object {
                    "height": 1334,
                    "position": "absolute",
                    "top": -1334,
                    "width": 750,
                    "zIndex": 1,
                  },
                  Object {
                    "top": -1334,
                  },
                ]
              }
            />
          </TouchableWithoutFeedback>,
          <withAnimatable(Component)
            animation="zoomIn"
            delay={0}
            direction="normal"
            duration={100}
            iterationCount={1}
            iterationDelay={0}
            onAnimationBegin={[Function]}
            onAnimationEnd={[Function]}
            onLayout={[Function]}
            onTransitionBegin={[Function]}
            onTransitionEnd={[Function]}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "lightgrey",
                  "borderRadius": 10,
                  "borderWidth": 1,
                  "position": "absolute",
                  "shadowColor": "#4E4A47",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.2,
                  "shadowRadius": 5,
                  "zIndex": 2,
                },
                Object {
                  "bottom": 10,
                  "left": 10,
                },
              ]
            }
            useNativeDriver={false}
          >
            <Component />
          </withAnimatable(Component)>,
        ],
        "style": Object {
          "zIndex": 2,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              style={
                Array [
                  Object {
                    "height": 1334,
                    "position": "absolute",
                    "top": -1334,
                    "width": 750,
                    "zIndex": 1,
                  },
                  Object {
                    "top": -1334,
                  },
                ]
              }
            />,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Array [
                Object {
                  "height": 1334,
                  "position": "absolute",
                  "top": -1334,
                  "width": 750,
                  "zIndex": 1,
                },
                Object {
                  "top": -1334,
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animation": "zoomIn",
            "children": <Component />,
            "delay": 0,
            "direction": "normal",
            "duration": 100,
            "easing": undefined,
            "iterationCount": 1,
            "iterationDelay": 0,
            "onAnimationBegin": [Function],
            "onAnimationEnd": [Function],
            "onLayout": [Function],
            "onTransitionBegin": [Function],
            "onTransitionEnd": [Function],
            "style": Array [
              Object {
                "backgroundColor": "white",
                "borderColor": "lightgrey",
                "borderRadius": 10,
                "borderWidth": 1,
                "position": "absolute",
                "shadowColor": "#4E4A47",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 5,
                "zIndex": 2,
              },
              Object {
                "bottom": 10,
                "left": 10,
              },
            ],
            "transition": undefined,
            "useNativeDriver": false,
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
